fix(xod-client): preserve whitespace in Deployment panel logs
Closes #1008

--- a/packages/xod-client/src/core/styles/components/Debugger.scss
+++ b/packages/xod-client/src/core/styles/components/Debugger.scss
@@ -183,6 +183,7 @@
         display: inline-block;
         color: $color-comment-text;
         font-family: $font-family-mono;
+        white-space: pre-wrap;
       }
     }
 
